src/styles/globals.scss
html,
body {
	background-color: #d9d9d9;
	padding: 0;
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
	color: inherit;
	text-decoration: none;
}

*,
*::before,
*::after {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

.emphasis {
	font-weight: bolder;
	border: 1px solid black;
	padding: 0.125rem;
}

.MuiAccordionSummary-content {
	margin-block: 0px !important;
	width: 100% !important;
}

.MuiAccordionSummary-root {
	padding: 0 !important;
}

